fix responsive issues on small and large desktops

--- a/src/CSS/style.scss
+++ b/src/CSS/style.scss
@@ -140,7 +140,8 @@ body {
     flex-direction: column;
     gap: 1.5rem;
     margin: 0 auto;
-    // overflow-x: hidden;
+    padding-left:8.25rem;
+    //width: calc(100vw - 8.25rem);
 }
 
 
@@ -157,6 +158,19 @@ body {
     gap: 1.5rem;
     width: 51.5rem;
 
+}
+
+
+// Responsiveness
+
+@media (min-width: 1440px) {
+    .right-side {
+        display: flex;
+        overflow: auto;
+        flex-direction: column;
+        gap: 1.5rem;
+        margin: 0 auto;
+    }
 }
 
 
